# imse

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.run/: pytest.run.xml  streamlit nosql.run.xml  streamlit sql.run.xml
backend/: auth.py  database.py  export_schemas.py  generate.py  populate.py  schemas.py  services.py  worker.py
backend/nosql/: db.py
backend/sql/: db.py  models.py
backend/test/: conftest.py  setup.py  test_db.py  test_generate.py  test_migration.py  test_nosql.py  test_sql.py
media/: divide_image.py
ui/: dashboard.py  session.py
ui/components/: events.py  login.py
ui/pages/: artist_success.py  create_user.py  list_events.py  list_tickets.py  view_top_visitors.py  view_users.py
ui/server_connections/: authentication.py  database.py  tasks.py
