[tool.poetry]
name = "imse"
version = "0.1.0"
description = ""
authors = ["Ia Mgvdliashvili <marvinzem@gmail.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
streamlit = "^1.28.1"
pydantic = "^2.4.2"
setuptools = "^68.2.2"
streamlit-authenticator = "^0.2.3"
pymongo = "^4.6.0"
pytest = "^7.4.3"
celery = "^5.3.4"
redis = "^5.0.1"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
